@@ -8,6 +8,7 @@ use File::HomeDir 1.00;
 use URI 1.71;
 use Path::Tiny 0.100 ();
 use Sereal 3.015 qw( encode_sereal decode_sereal );
+use Digest::MD5;
 
 # ABSTRACT: Alien::Build plugin to cache files downloaded from the internet
 # VERSION
@@ -32,6 +33,19 @@ account, but it is probably good enough for most Alien usage.
 
 =cut
 
+sub _local_file
+{
+  my($uri) = @_;
+
+  Path::Tiny
+    ->new(File::HomeDir->my_home)
+    ->child('.alienbuild/plugin_fetch_cache')
+    ->child($uri->scheme)
+    ->child($uri->host)
+    ->child($uri->path)
+    ->child('meta');
+}
+
 sub init
 {
   my($self, $meta) = @_;
@@ -46,16 +60,10 @@ sub init
       if($cache_url && $cache_url !~ m!^/!  && $cache_url !~ m!^file:!)
       {
         my $uri = URI->new($cache_url);
-        $local_file = Path::Tiny
-                          ->new(File::HomeDir->my_home)
-                          ->child('.alienbuild/plugin_fetch_cache')
-                          ->child($uri->scheme)
-                          ->child($uri->host)
-                          ->child($uri->path)
-                          ->child('meta');
+        $local_file = _local_file($uri);
         if(-r $local_file)
         {
-          print "Alien::Build::Plugin::Fetch::Cache> using cached response for $uri\n";
+          $build->log("using cached response for $uri");
           return decode_sereal($local_file->slurp_raw);
         }
       }
@@ -66,7 +74,25 @@ sub init
         $local_file->parent->mkpath;
         if($res->{type} eq 'file')
         {
-          my $data = $local_file->sibling('data');
+          my $md5 = Digest::MD5->new;
+          
+          if($res->{content})
+          {
+            $md5->add($res->{content});
+          }
+          else
+          {
+            open my $fh, '<', $res->{path};
+            $md5->addfile($fh);
+            close $fh;
+          }
+          
+          my $data = Path::Tiny->new(File::HomeDir->my_home)
+                     ->child('.alienbuild/plugin_fetch_cache/payload')
+                     ->child($md5->hexdigest)
+                     ->child($res->{filename});
+          $data->parent->mkpath;
+
           my $res2 = {
             type     => 'file',
             filename => $res->{filename},
@@ -95,7 +121,49 @@ sub init
       $res;
     }
   );
+
+  if($ENV{ALIEN_BUILD_PLUGIN_FETCH_CACHE_PRECACHE})
+  {
+    $meta->around_hook(
+      prefer => sub {
+        my($orig, $build, @rest) = @_;
+        my $ret = $orig->($build, @rest);
+      
+        if($ret->{type} eq 'list')
+        {
+          foreach my $file (@{ $ret->{list} })
+          {
+            my $url = $file->{url};
+            if($url && $url !~ m!^/!  && $url !~ m!^file:!)
+            {
+              my $local_file = _local_file(URI->new($url));
+              next if -f $local_file;
+              $build->log("precacheing $url");
+              $build->fetch($url);
+            }
+          }
+        }
+        $ret;
+      },
+    );
+  }
 }
+
+=head1 ENVIRONMENT
+
+=over 4
+
+=item ALIEN_BUILD_PLUGIN_FETCH_CACHE_PRECACHE
+
+If set to a true value, then this plugin will precache all files that match the appropriate pattern in the L<alienfile>.
+
+This can be helpful if you are developing a prefer plugin or filter and will be off-line for the development.
+
+Be careful, if no pattern is specified you could end up downloading the entire internet!
+
+=back
+
+=cut
 
 1;
 
