@@ -1,0 +1,6 @@
+use Test2::V0;
+use Test::Script;
+
+script_compiles 'bin/abcache';
+
+done_testing;
